--- a/statics/custom.css
+++ b/statics/custom.css
@@ -60,3 +60,15 @@ a:hover {
     border-left: 3px solid var(--brand-primary);
     padding-left: calc(1rem - 3px);
 }
+
+.navbar-vertical .dropdown-menu .dropdown-item.active {
+    background-color: rgba(var(--brand-primary-rgb), 0.22) !important;
+    color: #fff !important;
+    font-weight: 600;
+    border-left: 3px solid var(--brand-primary);
+    box-shadow: inset 0 0 0 1px rgba(var(--brand-primary-rgb), 0.35);
+}
+
+.navbar-vertical .dropdown-menu .dropdown-item.active .fa {
+    color: #fff !important;
+}
