--- a/templates/customer_detail.html
+++ b/templates/customer_detail.html
@@ -18,6 +18,16 @@
 {% endblock %}
 
 {% block content %}
+<style>
+    .preset-clickable-row {
+        cursor: pointer;
+    }
+
+    .preset-clickable-row:hover {
+        background-color: #f1f3f5;
+    }
+</style>
+
 <div class="col-12">
     <div class="row">
         <div class="col-lg-4">
@@ -164,7 +174,10 @@
                                     ? '<span class="badge bg-blue-lt">Preset</span>'
                                     : '<span class="badge bg-purple-lt">Custom</span>';
                                 const name = m.preset_config_name || 'Custom #' + m.custom_config_id;
-                                return `<tr>
+                                const rowAttrs = m.preset_config_id
+                                    ? `class="preset-clickable-row" onclick="window.location.href='/preset-configs/${m.preset_config_id}'"`
+                                    : '';
+                                return `<tr ${rowAttrs}>
                                     <td>${badge}</td>
                                     <td>${esc(name)}</td>
                                     <td>${formatDate(m.effective_from)}</td>
