--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/static/custom.css">
     {% block head_css %}{% endblock %}
 </head>
-<body class="layout-fluid">
+<body class="layout-fluid app-shell">
     <div class="page">
         <aside class="navbar navbar-vertical navbar-expand-lg" data-bs-theme="dark">
             <div class="container-fluid">
@@ -23,7 +23,7 @@
                         <span class="sidebar-brand-icon me-2">
                             <i class="fa fa-cube fa-lg"></i>
                         </span>
-                        <span class="sidebar-brand-text fw-bold" style="font-size: 1.1rem; letter-spacing: 0.02em;">
+                        <span class="sidebar-brand-text fw-bold">
                             Admin Panel
                         </span>
                     </a>
