--- a/templates/preset_configs.html
+++ b/templates/preset_configs.html
@@ -16,15 +16,15 @@
 {% block content %}
 <div class="col-12">
     <div class="card">
-        <div class="card-header">
-            <div class="col">
+        <div class="card-header list-header-row">
+            <div class="col list-toolbar">
                 <div class="input-icon">
                     <span class="input-icon-addon"><i class="fa fa-search"></i></span>
                     <input type="text" class="form-control" id="search-input"
                            placeholder="Search by name&hellip;">
                 </div>
             </div>
-            <div class="col-auto ms-auto ps-3">
+            <div class="col-auto ms-auto ps-2 list-toolbar-actions">
                 <button class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#preset-drawer" onclick="openCreate()">
                     <i class="fa fa-plus me-1"></i>New Preset
                 </button>
